3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Code improvements:
common/image.c: Declare some variables and functions as static or const; add
   safeguards while loading config files; remove support for numeric face
   names (no active archetype or map does use it); in free_all_images()
   deallocate memory allocated for smoothing.
crossedit/xutil.c: Remove assignment to nrofpixmaps since ReadBmapNames()
   already sets this variable.
include/{global.h, libproto.h, loader.h}: Remove now static variables and
   functions.
Andreas Kirschbaum 2005-10-24

common/readable.c: Fix out of bounds access to max_titles[] in
   init_book_archive().
common/image.c, include/define.h, include/global.h: Remove unused variables
   potion_face and POTION_FACE_NAME.
common/image.c, include/global.h: Remove unused variable blank_look.
Andreas Kirschbaum 2005-10-24

Make shout command work in old socket emulation mode.
common/commands.c: Sort all command arrays in init_commands().
Andreas Kirschbaum 2005-10-23

common/item.c - fix spelling mistake
common/utils.c include/libproto.h - new function make_list_like that takes a 
   string of comma deliminated words, and puts an and in the right place.
include/sproto.h server/apply.c server/shop.c -new function can_pay - checks
   that a player can pay for every unpaid item that they are holding before
   starting to purchase them.
Brendan Lally 2005-10-21

plugins/cfpython/{Makefile.in, Makefile.am}, plugins/cfpython/include/cfpython.h:
   Corrected improper regeneration of the function prototypes using
   "make proto" for the cfpython plugin.
Gros 2005-10-20

plugins/cfpython/{cfpython.c, cfpython_object.c, cfpython_map.c},